--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,12 @@
     <h2>Contacto</h2>
 </head>
 <body>
+    <li><a href="index.html">Home Page</li>
+    <li><a href="quien_es_somos.html">¿Quien es somos?</a></li>
+    <li><a href="productos.html">Productos</a></li>
+    <li><a href="tipos_de_lince.html">Tipos de linces</a></li>
+    <li><a href="proteger_lince.html">Proteger a los linces!</a> </li>
+
     <h3> Si te interesa la causa de estos nobles animales, contactanos!! </h3>
 
     <form action="" method="POST">
@@ -37,5 +43,7 @@
 
     </form>
     
+    <footer><p>Derechos del sitio 2021 nose</p> </footer>
+
 </body>
 </html>
