--- a/productos.html
+++ b/productos.html
@@ -9,6 +9,12 @@
     <h2>Productos</h2>
 </head>
 <body>
+    <li><a href="index.html">Home Page</li>
+    <li><a href="quien_es_somos.html">¿Quien es somos?</a></li>
+    <li><a href="tipos_de_lince.html">Tipos de linces</a></li>
+    <li><a href="proteger_lince.html">Proteger a los linces!</a> </li>
+    <li><a href="contacto.html">Contacto</a></li>
+
 
     <table>
         <tr>
@@ -16,6 +22,7 @@
             <th>precio</th>
             <th>talle</th>
             <th>color</th>
+            <th>Precios de envio</th>
         </tr>
         <tr>
             <td>
@@ -38,6 +45,14 @@
                     <option value="">VERDE</option>
                 </select> 
                 <input type="button" value="Comprar!">
+            </td>
+            <td>
+                <ul>
+                    <li>CABA menos de 5KM:$300</li>
+                    <li>CABA mas de 5KM: $500</li>
+                    <li>Conurbano: $700</li>
+                    <li>Interior del pais: $1000</li>
+                </ul>
             </td>
         </tr>
         <tr>
@@ -63,7 +78,15 @@
 
                 </select> 
                 <input type="button" value="Comprar!">
-            </td>    
+            </td>   
+            <td>
+                <ul>
+                    <li>CABA menos de 5KM:$300</li>
+                    <li>CABA mas de 5KM: $500</li>
+                    <li>Conurbano: $700</li>
+                    <li>Interior del pais: $1000</li>
+                </ul>
+            </td>  
         </tr>
         <tr>
             <td>
@@ -86,10 +109,18 @@
                     <option value="">ROSA</option>
                 </select> 
                 <input type="button" value="Comprar!">
-            </td>    
+            </td>  
+            <td>
+                <ul>
+                    <li>CABA menos de 5KM:$300</li>
+                    <li>CABA mas de 5KM: $500</li>
+                    <li>Conurbano: $700</li>
+                    <li>Interior del pais: $1000</li>
+                </ul>
+            </td>  
         </tr>
 
     </table>
-    
+    <footer><p>Derechos del sitio 2021 nose</p> </footer>
 </body>
 </html>
