--- a/quien_es_somos.html
+++ b/quien_es_somos.html
@@ -9,12 +9,17 @@
     <h2>¿Quien es somos?</h2>
 </head>
 <body>
+    <li><a href="index.html">Home Page</li>
+    <li><a href="productos.html">Productos</a></li>
+    <li><a href="tipos_de_lince.html">Tipos de linces</a></li>
+    <li><a href="proteger_lince.html">Proteger a los linces!</a> </li>
+    <li><a href="contacto.html">Contacto</a></li>
     <p>La realidad es que no somos nadie. Somos gente que le gustan los linces. Si queres mas info entra a este sitio 
         <a href= "https://es.wikipedia.org/wiki/Lynx_(animal)" target="_blank">sitio!</a>
     </p>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gSMte9jwrFM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
-    <footer>Derechos del sitio 2021 nose </footer>
+    <footer><p>Derechos del sitio 2021 nose</p> </footer>
 </body>
 </html>
