--- a/tipos_de_lince.html
+++ b/tipos_de_lince.html
@@ -9,7 +9,12 @@
     <h2>Quienes somos??</h2>
 </head>
 <body>
-    
+    <li><a href="index.html">Home Page</li>
+    <li><a href="quien_es_somos.html">¿Quien es somos?</a></li>
+    <li><a href="productos.html">Productos</a></li>
+    <li><a href="proteger_lince.html">Proteger a los linces!</a> </li>
+    <li><a href="contacto.html">Contacto</a></li>
+
     <h3>Lince Canadiense</h3>
     <img src="img/Lince_canadiense_4.png" alt="lince_canadiense"> 
     <p>El lince del Canadá (Lynx canadensis) es una especie de mamífero carnívoro de la familia Felidae, 
@@ -47,6 +52,6 @@
         También son características las patillas que cuelgan de sus mejillas. Aparecen a partir del año de vida, cuando apenas cuelgan por debajo de la barbilla y aumentan de tamaño con la edad. Los machos tienen las patillas y los pinceles negros y más largos que las hembras.
         <a href="https://es.wikipedia.org/wiki/Lynx_pardinus">Fuente</a>
     </p>
-    
+    <footer><p>Derechos del sitio 2021 nose</p> </footer>
 </body>
 </html>
